test/spec_vectors/local_tee/fail/module_40.wat
(module (func $large-param (param i32 i64) (local.tee 714324343 (i32.const 0)) drop))